[package]
name = "rhoBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
missing_panics_doc = "allow"
missing_errors_doc = "allow"

[dependencies]
serenity = "0.12"
tokio = { version = "1.39.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
poise = "0.6.1"
env_logger = "0.11.4"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "sqlite" ] }
chrono = "0.4.38"
log = "0.4.22"
dotenv = "0.15.0"
rust-fuzzy-search = "0.1.1"
scraper = "0.19.1"
clokwerk = "0.4.0"
chrono-tz = "0.9.0"
serde_json = "1.0.120"
parse_wiki_text = "0.1.5"
regex = { version = "1.10.5", features = ["std"] }
rand = "0.8.5"
